# ee-utils

./: .gitignore  LICENSE  README.md  ee_utils.py  pyproject.toml
docs/: README_source.ipynb
docs/nb_outputs/: Beijing.tif  Manila.tif  Singapore.tif  Tokyo.tif
src/ee_utils/: __init__.py  geo.py  sampling.py  viz.py
src/ee_utils/imagery/: __init__.py  covariates.py  landsat.py  sentinel2.py
src/eeutils/: __init__.py  geo.py  sampling.py  viz.py
src/eeutils/imagery/: __init__.py  covariates.py  landsat.py  sentinel2.py
