[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gee-imagery-exporter"
version = "0.1.0"
description = "Utilities for sampling from Google Earth Engine imagery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "earthengine-api>=0.1.393",
  "numpy>=1.24",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "pillow>=10.0",
  "requests>=2.31",
  "tqdm>=4.66",
  "pyproj>=3.6",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=7.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
